<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="Already_have_account_sign_in">Already have account? Login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="my_profile">Profile</string>
    <string name="sell">Sell</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="share">share</string>
    <string name="sellit">Welcome to Sell It!</string>"
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="home">Home</string>
    <string name="product_name">Product name</string>
    <string name="feedback">Feedback</string>
    <string name="Welcome_to_sellit">Welcome to SellIt!</string>
    <string name="intro">A platform for students to buy and sell old goods to other students within their college.</string>
    <string name="our_team">Our Team</string>
    <string name="c">"Name    :    Hasnain Sajid \nSap ID       :    27199"</string>
    <string name="k">"Name    :    Ahmad Raza    \nSAP ID       :    27030"</string>
    <string name="forgot_pass">Forgot password? Reset</string>
    <string name="go_back">Go Back</string>
    <string name="reset_pass">Reset Password</string>
    <string name="save">Save</string>
    <string name="title_activity_login">Please\nLogin</string>
    <string name="title_activity_signup">Create\nAccount</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
